--- a/index.html
+++ b/index.html
@@ -1,27 +1,26 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width">
-    <title>RickRoll</title>
-    <link rel="stylesheet" href="index.css">
-    <script type = "text/javascript">  
-        function myfunction()
-         {   
-            var urls = new Array('https://www.youtube.com/watch?v=BT9h5ifR1tY&ab_channel=Earrapes','https://www.youtube.com/watch?v=HIcSWuKMwOw&ab_channel=10Hours', 'https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstleyVEVO');
-            window.location = urls[Math.floor(urls.length*Math.random())];
-            var temp = setInterval("redirect()", 3000);
-         }  
-    </script><!--i hate js-->
+<title>Home</title>
+<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+<link href="default.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-    <h1> Totally not a rick roll </h1>
-    <p id="p1">The rules are simple you either get rick rolled or you get rick rolled</p>
-    <p class= "parent" id="p2">Don't be scared click on one</p>
-    <!--No no trust me it won't rick roll you anyway-->
-    <button id="id1" onclick="myfunction()" class= "rickroll">Not rick roll</button>
-    <button id="id2" onclick="myfunction()"class= "rickroll">rick roll</button>
-    <a  id="about" href=https://en.wikipedia.org/wiki/Rickrolling>What is rick roll</a>
+  <div class="static-txt">root@potato:~</div>
+  <div class="typewriter">
+    <h1>whoami</h1>
+  </div>
+  <div class="more">I am a computer science student who loves to break things and tries her best<br>
+     to understand how things work currently studying at Istanbul Arel University.<br>
+      I am into reverse engineering and pentesing. I do write blogs about reversing<br> things and did write/test CTFs on HTB or TryHackMe.<br>
+        I do write python scripts from time to time on my GitHub account<br>
+        <a href="mailto:islamukheef@gmail.com">islamukheef@gmail.com</a><br>
+      social media: @islamukheef </div>
+<nav>
+  <a href="https://github.com/IslaMukheef">GitHub</a>
+  <a href="https://islamukheef.medium.com/">Blog</a>
+  <div class="animation start-home"></div>
+</nav>
 
 </body>
 </html>
