--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <title>Home</title>
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-<link href="default.css" rel="stylesheet" type="text/css" />
+<link href="index.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
   <div class="static-txt">root@potato:~</div>
