--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div class="typewriter">
     <h1>whoami</h1>
   </div>
-  <div class="more">I am a computer science student who loves to break things and tries her best<br>
+  <div class="more">Isla Mukheef a computer science student who loves to break things and tries her best<br>
      to understand how things work currently studying at Istanbul Arel University.<br>
       I am into reverse engineering and pentesing. I do write blogs about reversing<br> things and did write/test CTFs on HTB or TryHackMe.<br>
         I do write python scripts from time to time on my GitHub account<br>
