--- a/index.html
+++ b/index.html
@@ -190,6 +190,9 @@
     </div>
     <a href="https://islamukheef.medium.com/" class="button">Blog</a>
     <a href="https://github.com/IslaMukheef/" class="button">GitHub</a>
+    <div class="section">
+        <a href="teex.html" class="button">Teex - Terminal Text Editor</a>
+    </div>
   </div>
 </body>
 </html>
