--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     .cursor {
       width: 10px;
       height: 20px;
-      background-color: #fff;a
+      background-color: #fff;
       margin-left: 5px;
       animation: blink 1s steps(2, start) infinite;
     }
@@ -62,18 +62,23 @@
       align-items: flex-start;
       justify-content: center;
       margin-top: 20px;
+      flex-wrap: wrap;  
     }
 
     .ascii-art {
-      /* color: #3498db; Light blue */
       color: #ff9933;
       white-space: pre;
       margin-right: 20px;
       transform: translateX(-40px); 
+      flex-shrink: 0; 
+      width: 100%;
+      max-width: 350px; 
+      margin-bottom: 20px;
     }
 
     .neofetch-info {
       line-height: 1.5;
+      max-width: 400px;
     }
 
     .neofetch-info span {
@@ -137,7 +142,6 @@
     <div class="neofetch-container">
       <div class="ascii-art">
         <code>
-            <!-- I tried to get ascii art of my cat Bezzun but it was too hard so i just made this one orange like him :3-->
             ⣤⡶⢶⣦⡀
 ⠀⠀⠀⣴⡿⠟⠷⠆⣠⠋⠀⠀⠀⢸⣿
 ⠀⠀⠀⣿⡄⠀⠀⠀⠈⠀⠀⠀⠀⣾⡿
