--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<!-- pridly written in vim while my cat was taking a nap in my lap-->
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>whoami</title>
+  <meta name="description" content="Isla Mukheef - Computer Science Student, Low-level Programmer, and Cybersecurity Enthusiast">
+  <meta name="keywords" content="Isla Mukheef, low-level programming, C, Assembly, reverse engineering, pentesting, Linux, GitHub, Medium Blog">
+  <meta name="author" content="Isla Mukheef">
+  <title>Isla Mukheef</title>  
   <style>
     body {
       font-family: monospace;
