--- a/index.html
+++ b/index.html
@@ -6,20 +6,84 @@
   <meta name="description" content="Isla Mukheef - Computer Science Student, Low-level Programmer, and Cybersecurity Enthusiast">
   <meta name="keywords" content="Isla Mukheef, low-level programming, C, Assembly, reverse engineering, pentesting, Linux, GitHub, Medium Blog">
   <meta name="author" content="Isla Mukheef">
-  <title>Isla Mukheef</title>  
+  <title>Isla Mukheef</title>
   <style>
     body {
       font-family: monospace;
-      background-color: #120514;
-      color: #fff;
+      color: #ffffff;
       margin: 0;
       padding: 0;
       display: flex;
-      align-items: center;
       justify-content: center;
-      flex-direction: column;
+      align-items: center;
       height: 100vh;
       text-align: center;
+      overflow: hidden;
+      background-image: url('background.png');
+      background-size: cover;
+      background-position: center;
+      background-attachment: fixed;
+    }
+
+    body::before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background: inherit;
+      filter: blur(8px);
+      z-index: -1;
+    }
+
+    .window {
+      background-color: rgba(18, 5, 20, 0.8);
+      border: 2px solid #444;
+      border-radius: 10px;
+      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.6);
+      padding: 20px;
+      max-width: 800px;
+      width: 100%;
+      margin: 20px;
+      position: relative;
+    }
+
+    .header {
+      background-color: #222;
+      color: #fff;
+      padding: 10px;
+      border-radius: 10px 10px 0 0;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+    }
+
+    .window-title {
+      font-size: 20px;
+      font-weight: bold;
+      color: #fff;
+      text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.4);
+    }
+
+    .close-btn {
+      width: 15px;
+      height: 15px;
+      background-color: red;
+      border-radius: 50%;
+      border: none;
+      cursor: pointer;
+      position: relative;
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+    }
+
+    .close-btn:focus {
+      outline: none;
+    }
+
+    .close-btn:hover {
+      background-color: darkred;
     }
 
     .prompt {
@@ -27,7 +91,7 @@
       font-size: 20px;
       display: flex;
       align-items: center;
-      justify-content: center;
+      justify-content: left; 
     }
 
     .whoami {
@@ -40,7 +104,7 @@
     .cursor {
       width: 10px;
       height: 20px;
-      background-color: #fff;a
+      background-color: #fff;
       margin-left: 5px;
       animation: blink 1s steps(2, start) infinite;
     }
@@ -56,56 +120,15 @@
       line-height: 1.5;
       max-width: 800px;
       margin: 0 auto;
+      text-align: left; 
     }
 
-    .neofetch-container {
+    .button-container {
       display: flex;
-      flex-direction: row;
-      align-items: flex-start;
+      gap: 20px;
       justify-content: center;
+      align-items: center;
       margin-top: 20px;
-    }
-
-    .ascii-art {
-      /* color: #3498db; Light blue */
-      color: #ff9933;
-      white-space: pre;
-      margin-right: 20px;
-      transform: translateX(-40px); 
-    }
-
-    .neofetch-info {
-      line-height: 1.5;
-    }
-
-    .neofetch-info span {
-      color: #0f0; 
-    }
-
-    .colors {
-      display: flex;
-      margin-top: 10px;
-      justify-content: center;
-    }
-
-    .color-block {
-      width: 20px;
-      height: 20px;
-      margin-right: 5px;
-    }
-
-    .color-1 { background-color: red; }
-    .color-2 { background-color: green; }
-    .color-3 { background-color: yellow; }
-    .color-4 { background-color: blue; }
-    .color-5 { background-color: magenta; }
-    .color-6 { background-color: cyan; }
-    .color-7 { background-color: gray; }
-    .color-8 { background-color: white; }
-
-    a {
-      color: #0f0;
-      text-decoration: none;
     }
 
     .button {
@@ -125,75 +148,110 @@
     .button:hover {
       background-color: rgb(87, 12, 72);
     }
+
+    .blog-section {
+      margin-top: 20px;
+      text-align: left;
+    }
+
+    .blog-title {
+      font-size: 18px;
+      color: #ff9933;
+    }
+
+    .blog-date {
+      font-size: 14px;
+      color: #aaa;
+    }
+
+    .blog-section ul {
+      list-style: none;
+      padding: 0;
+    }
+
+    .blog-section li {
+      margin: 10px 0;
+    }
+
+    .email {
+      font-size: 18px;
+      color: #4CAF50;
+      font-weight: bold;
+      text-decoration: none;
+    }
+
+    .email:hover {
+      text-decoration: underline;
+    }
+
+    @media (max-width: 768px) {
+      .window {
+        padding: 10px;
+        max-width: 100%;
+      }
+      
+      .button-container {
+        flex-direction: column;
+      }
+
+      .button {
+        margin: 5px 0;
+      }
+    }
   </style>
 </head>
 <body>
-  <div class="prompt">
-    root@potato:~$ 
-    <span class="whoami">
-      whoami
-      <div class="cursor"></div>
-    </span>
-  </div>
-  <div class="output">
-    <div class="neofetch-container">
-      <div class="ascii-art">
-        <code>
-            <!-- I tried to get ascii art of my cat Bezzun but it was too hard so i just made this one orange like him :3-->
-            ⣤⡶⢶⣦⡀
-⠀⠀⠀⣴⡿⠟⠷⠆⣠⠋⠀⠀⠀⢸⣿
-⠀⠀⠀⣿⡄⠀⠀⠀⠈⠀⠀⠀⠀⣾⡿
-⠀⠀⠀⠹⣿⣦⡀⠀⠀⠀⠀⢀⣾⣿
-⠀⠀⠀⠀⠈⠻⣿⣷⣦⣀⣠⣾⡿
-⠀⠀⠀⠀⠀⠀⠀⠉⠻⢿⡿⠟
-⠀⠀⠀⠀⠀⠀⠀⠀⠀⡟⠀⠀⠀⢠⠏⡆⠀⠀⠀⠀⠀⢀⣀⣤⣤⣤⣀⡀
-⠀⠀⠀⠀⠀⡟⢦⡀⠇⠀⠀⣀⠞⠀⠀⠘⡀⢀⡠⠚⣉⠤⠂⠀⠀⠀⠈⠙⢦⡀
-⠀⠀⠀⠀⠀⡇⠀⠉⠒⠊⠁⠀⠀⠀⠀⠀⠘⢧⠔⣉⠤⠒⠒⠉⠉⠀⠀⠀⠀⠹⣆
-⠀⠀⠀⠀⠀⢰⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢻⠀⠀⣤⠶⠶⢶⡄⠀⠀⠀⠀⢹⡆
-⠀⣀⠤⠒⠒⢺⠒⠀⠀⠀⠀⠀⠀⠀⠀⠤⠊⠀⢸⠀⡿⠀⡀⠀⣀⡟⠀⠀⠀⠀⢸⡇
-⠈⠀⠀⣠⠴⠚⢯⡀⠐⠒⠚⠉⠀⢶⠂⠀⣀⠜⠀⢿⡀⠉⠚⠉⠀⠀⠀⠀⣠⠟
-⠀⠠⠊⠀⠀⠀⠀⠙⠂⣴⠒⠒⣲⢔⠉⠉⣹⣞⣉⣈⠿⢦⣀⣀⣀⣠⡴⠟
-        </code>
-      </div>
-      <div class="neofetch-info">
-        <p><span>OS:</span> Isla x86_64</p>
-        <p><span>Host:</span> Potato-PC</p>
-        <p><span>Kernel:</span> Isla 5.15.0-custom</p>
-        <p><span>Uptime:</span> 24 years</p>
-        <p><span>Packages:</span> 42 (dpkg)</p>
-        <p><span>Shell:</span> /bin/bash 5.1.8</p>
-        <p><span>Terminal:</span> PotatoTerm v1.0</p>
-        <p><span>Resolution:</span> 1920x1080</p>
-        <p><span>Memory:</span> 8GB / 16GB</p>
-        <div class="colors">
-          <div class="color-block color-1"></div>
-          <div class="color-block color-2"></div>
-          <div class="color-block color-3"></div>
-          <div class="color-block color-4"></div>
-          <div class="color-block color-5"></div>
-          <div class="color-block color-6"></div>
-          <div class="color-block color-7"></div>
-          <div class="color-block color-8"></div>
-        </div>
-      </div>
+  <div class="window">
+    <div class="header">
+      <span class="window-title">Isla Mukheef</span>
+      <button class="close-btn" onclick="window.close()"></button>
     </div>
-    <div>
+    <p></p>
+    <div class="prompt">
+      root@potato:~$ 
+      <span class="whoami">
+        whoami
+        <div class="cursor"></div>
+      </span>
+    </div>
+
+    <div class="output">
       <p>Isla Mukheef is a computer science student at Istanbul Arel University.</p>
       <p>
-      With a passion for understanding the intricacies of computer systems, Isla has delved into the world of low-level programming,
-          exploring C and Assembly. This newfound expertise complements her existing skills in reverse engineering, pentesting, and backend development. 
-          Isla enjoys sharing her knowledge and experiences through personal blog and has actively participated in CTF challenges on platforms like HTB and TryHackMe. 
-          Additionally, Isla has been involved in teaching activities at the university, sharing her knowledge of Linux, C programming, and other technical subjects with fellow students.
+        With a passion for understanding the intricacies of computer systems, Isla has delved into the world of low-level programming, exploring C and Assembly. 
+        This newfound expertise complements her existing skills in reverse engineering, pentesting, and backend development. 
+        Isla enjoys sharing her knowledge and experiences through personal blog and has actively participated in CTF challenges on platforms like HTB and TryHackMe.
+         Additionally, Isla has been involved in teaching activities at the university, sharing her knowledge of Linux, C programming, and other technical subjects with fellow students.
       </p>
       <p>
-        <a href="islamukheef@gmail.com">islamukheef@gmail.com</a><br>
+        <a href="mailto:islamukheef@gmail.com" class="email">islamukheef@gmail.com</a><br>
         Social Media: @islamukheef
       </p>
     </div>
-    <a href="https://islamukheef.medium.com/" class="button">Blog</a>
-    <a href="https://github.com/IslaMukheef/" class="button">GitHub</a>
-    <div class="section">
-        <a href="teex.html" class="button">Teex - Terminal Text Editor</a>
+
+    <div class="button-container">
+      <a href="https://github.com/IslaMukheef/" class="button">GitHub</a>
+      <a href="teex.html" class="button">Teex - Terminal Text Editor</a>
+      <a href="https://medium.com/@islamukheef" class="button">Blog</a> 
+    </div>
+
+    <div class="blog-section" id="blog">
+      <h2>Blog</h2>
+      <h3>Most Recent</h3>
+      <ul>
+        <li>
+          <a href="https://islamukheef.medium.com/implementing-the-undo-ctrl-z-functionality-with-circular-queues-in-c-fcce951ea14f" class="blog-title">Undo Functionality with Circular Queues in C</a>
+          <span class="blog-date">- Dec 30, 2024</span>
+        </li>
+        <li>
+          <a href="https://islamukheef.medium.com/implementing-the-redo-ctrl-y-functionality-with-circular-queues-in-c-26ee16c83f1b" class="blog-title">Extending Undo logic to implement Redo</a>
+          <span class="blog-date">- Dec 31, 2024</span>
+        </li>
+        <li>
+          <a href="https://islamukheef.medium.com/building-a-simple-64-bit-server-in-assembly-with-nasm-e5e310a2f043" class="blog-title">Building a 64-Bit Server in Assembly with NASM</a>
+          <span class="blog-date">- Nov 30, 2024</span>
+        </li>
+      </ul>
     </div>
   </div>
 </body>
