--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=800">
   <meta name="description" content="Isla Mukheef - Computer Science Student, Low-level Programmer, and Cybersecurity Enthusiast">
   <meta name="keywords" content="Isla Mukheef, low-level programming, C, Assembly, reverse engineering, pentesting, Linux, GitHub, Medium Blog">
   <meta name="author" content="Isla Mukheef">
