--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   align-items: center;
   height: 100vh;
   text-align: center;
-  background-image: url('background.png');
+  background-image: url('background.jpg');
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
