--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <title>Isla Mukheef</title>
   <style>
     body {
-  font-family: monospace;
+   font-family: monospace;
   color: #ffffff;
   margin: 0;
   padding: 0;
@@ -18,10 +18,7 @@
   align-items: center;
   height: 100vh;
   text-align: center;
-  background-image: url('background.jpg');
-  background-size: cover;
-  background-position: center;
-  background-attachment: fixed;
+  background-color: #C2A2D4;  
 }
 
 body::before {
