--- a/teex.html
+++ b/teex.html
@@ -66,6 +66,7 @@
       <li>Basic text editing: inserting, deleting, and moving text</li>
       <li>File saving (<code>Ctrl+S</code>)</li>
       <li>Undo recent actions (<code>Ctrl+Z</code>)</li>
+      <li>File explorer (<code>Ctrl+F</code>)</li>
       <li>Redo restored characters (<code>Ctrl+Y</code>)</li>
       <li>Arrow key navigation</li>
       <li>Open and edit existing files via the command line</li>
