--- a/index.html
+++ b/index.html
@@ -243,6 +243,10 @@ body::before {
       <h3>Most Recent</h3>
       <ul>
         <li>
+          <a href="https://islamukheef.medium.com/building-a-linux-style-file-explorer-recreating-the-ls-command-in-c-71ecce6d79ad" class="blog-title">Building a Linux-Style File Explorer: Recreating the ‘ls’ Command in C</a>
+          <span class="blog-date">- Feb 01, 2025</span>
+        </li>
+        <li>
           <a href="https://islamukheef.medium.com/implementing-the-undo-ctrl-z-functionality-with-circular-queues-in-c-fcce951ea14f" class="blog-title">Undo Functionality with Circular Queues in C</a>
           <span class="blog-date">- Dec 30, 2024</span>
         </li>
@@ -250,10 +254,7 @@ body::before {
           <a href="https://islamukheef.medium.com/implementing-the-redo-ctrl-y-functionality-with-circular-queues-in-c-26ee16c83f1b" class="blog-title">Extending Undo logic to implement Redo</a>
           <span class="blog-date">- Dec 31, 2024</span>
         </li>
-        <li>
-          <a href="https://islamukheef.medium.com/building-a-simple-64-bit-server-in-assembly-with-nasm-e5e310a2f043" class="blog-title">Building a 64-Bit Server in Assembly with NASM</a>
-          <span class="blog-date">- Nov 30, 2024</span>
-        </li>
+        
       </ul>
     </div>
   </div>
