--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@ body::before {
       <h3>Most Recent</h3>
       <ul>
         <li>
-          <a href="https://islamukheef.medium.com/building-a-linux-style-file-explorer-recreating-the-ls-command-in-c-71ecce6d79ad" class="blog-title">Building a Linux-Style File Explorer: Recreating the ‘ls’ Command in C</a>
+          <a href="https://islamukheef.medium.com/building-a-linux-style-file-explorer-recreating-the-ls-command-in-c-71ecce6d79ad" class="blog-title">Linux-Style File Explorer: Recreating the ‘ls’ Command in C</a>
           <span class="blog-date">- Feb 01, 2025</span>
         </li>
         <li>
