--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@ body::before {
     </div>
 
     <div class="output">
-      <p>Isla Mukheef is a computer science student at Istanbul Arel University.</p>
+      <p>Isla Mukheef is currently pursuing an Honours Bachelor of Computer Science at Sheridan College, having previously studied Computer Engineering at Istanbul Arel University.</p>
       <p>
         With a passion for understanding the intricacies of computer systems, Isla has delved into the world of low-level programming, exploring C and Assembly. 
         This newfound expertise complements her existing skills in reverse engineering, pentesting, and backend development. 
