--- a/index.html
+++ b/index.html
@@ -204,6 +204,13 @@ body::before {
   </style>
 </head>
 <body>
+  
+  <script>
+      if (window.location.hostname === 'islamukheef.ca') 
+      {
+        window.location.href = 'https://www.islamukheef.ca' + window.location.pathname;
+      }
+ </script>
   <div class="window">
     <div class="header">
       <span class="window-title">Isla Mukheef</span>
@@ -260,3 +267,4 @@ body::before {
   </div>
 </body>
 </html>
+
