--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="keywords" content="Isla Mukheef, low-level programming, C, Assembly, reverse engineering, pentesting, Linux, GitHub, Medium Blog">
   <meta name="author" content="Isla Mukheef">
   <title>Isla Mukheef</title>
+  <link rel="icon" type="image/x-icon" href="icon.png">
   <style>
     body {
    font-family: monospace;
@@ -267,4 +268,5 @@ body::before {
   </div>
 </body>
 </html>
+
 
